fix(stack): adjust section visibility threshold and update hive grid height for improved layout

--- a/components/ui/HiveGroup/index.scss
+++ b/components/ui/HiveGroup/index.scss
@@ -10,6 +10,7 @@
     font-weight: 500;
     text-align: center;
     color: color-mix(in srgb, var(--foreground), transparent 20%);
+    margin-bottom: 1.5rem
   }
 
   &__hexgrid {
@@ -44,11 +45,19 @@
   }
 
   &__hexgrid > div:nth-child(odd) {
-    margin-right: 16px;
+    margin-right: 24px;
   }
 
   &__hexgrid > div:nth-child(even) {
-    margin-left: 16px;
-    margin-top: 28px;
+    margin-left: 24px;
+    margin-top: 56px;
+  }
+}
+
+@media (max-width: 790px) {
+  .hive {
+    &__group-title {
+      margin-top: 5rem;
+    }
   }
 }
